align fix

--- a/client/src/LoginSignup.css
+++ b/client/src/LoginSignup.css
@@ -2,6 +2,7 @@
     margin: 100px;
     padding: 100px;
     text-align: center;
+    align-self: center;
 }
 
 #button {
